--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,4 +1,4 @@
-name: Build CI-Linux
+name: C/C++ CI
 
 on:
   push:
@@ -13,6 +13,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: build
-      run: *** 03_Implementation/Billing
-    
+    - name: configure
+      run: ./configure
+    - name: make
+      run: make
+    - name: make check
+      run: make check
+    - name: make distcheck
+      run: make distcheck
